# edgedb_codegen

./: .devcontainer.json  .env.example  .envrc  .gitignore  .release-plz.toml  Cargo.toml  changelog.md  deny.toml  devenv.nix  devenv.yaml  dprint.json  eslint.config.js  readme.md  rust-toolchain.toml  rustfmt.toml  taplo.toml
.cargo/: config.toml
.config/: nextest.toml
.github/actions/devenv/: action.yml
.github/workflows/: ci.yml
crates/edgedb_codegen/: CHANGELOG.md  Cargo.toml  cargo.md  readme.md
crates/edgedb_codegen/queries/: insert_user.edgeql  invalid.edgeql  remove_user.edgeql  select_user.edgeql
crates/edgedb_codegen/src/: constants.rs  lib.rs  utils.rs
crates/edgedb_codegen/src/snapshots/: edgedb_codegen__tests__can_generate_content_without_args.snap  edgedb_codegen__tests__can_generate_singular_content.snap  edgedb_codegen__tests__each_thing.snap  edgedb_codegen__tests__explore.snap
crates/edgedb_codegen/tests/: codegen.rs  compile.rs  query.rs
crates/edgedb_codegen/tests/codegen/: case_01_str.rs  case_02_bool.rs  case_03_int64.rs  case_04_float64.rs  case_05_bigint.rs  case_06_decimal.rs  case_07_uuid.rs  case_08_datetime.rs  case_09_duration.rs  case_10_bytes.rs  case_11_array.rs  case_12_tuple.rs  case_13_named_tuple.rs  case_14_set.rs  case_15_empty_set.rs  case_16_input_shape.rs  case_17_input_shape_with_args.rs  case_18_object_shape.rs  case_19_object_shape_with_args.rs  case_20_types_query.rs
crates/edgedb_codegen/tests/compile/codegen/: case_01_str.rs  case_02_bool.rs  case_03_int64.rs  case_04_float64.rs  case_05_bigint.rs  case_06_decimal.rs  case_07_uuid.rs  case_08_datetime.rs  case_09_duration.rs  case_10_array.rs  case_11_tuple.rs  case_12_named_tuple.rs  case_13_set.rs  case_14_empty_set.rs  case_15_input_shape.rs  case_16_input_shape_with_args.rs  case_17_object_shape.rs  case_18_object_shape_with_args.rs  case_19_types_query.rs  case_20_range.rs  insert_user.rs  remove_user.rs
crates/edgedb_codegen/tests/compile/macros/: absolute_file.rs  absolute_file.stderr  extra_args.rs  extra_args.stderr  incorrect_args.rs  incorrect_args.stderr  input_tuple.rs  input_tuple.stderr  invalid_query.rs  invalid_query.stderr  invalid_query_file.rs  invalid_query_file.stderr  missing_file.rs  missing_file.stderr  no_args.rs  no_args.stderr  one_arg.stderr
crates/edgedb_codegen/tests/macros/: incorrect_args.rs  incorrect_args.stderr  invalid_query.stderr  no_args.rs  no_args.stderr  one_arg.rs  one_arg.stderr
crates/edgedb_codegen/tests/snapshots/: codegen__codegen_files@insert_user.snap  codegen__codegen_files@remove_user.snap  codegen__codegen_literals@case_01_str.snap  codegen__codegen_literals@case_02_bool.snap  codegen__codegen_literals@case_03_int64.snap  codegen__codegen_literals@case_04_float64.snap  codegen__codegen_literals@case_05_bigint.snap  codegen__codegen_literals@case_06_decimal.snap  codegen__codegen_literals@case_07_uuid.snap  codegen__codegen_literals@case_08_datetime.snap  codegen__codegen_literals@case_09_duration.snap  codegen__codegen_literals@case_10_array.snap  codegen__codegen_literals@case_10_bytes.snap  codegen__codegen_literals@case_11_array.snap  codegen__codegen_literals@case_11_tuple.snap  codegen__codegen_literals@case_12_named_tuple.snap  codegen__codegen_literals@case_12_tuple.snap  codegen__codegen_literals@case_13_named_tuple.snap  codegen__codegen_literals@case_13_set.snap  codegen__codegen_literals@case_14_empty_set.snap  codegen__codegen_literals@case_14_set.snap  codegen__codegen_literals@case_15_empty_set.snap  codegen__codegen_literals@case_15_input_shape.snap  codegen__codegen_literals@case_16_input_shape.snap  codegen__codegen_literals@case_16_input_shape_with_args.snap  codegen__codegen_literals@case_17_input_shape_with_args.snap  codegen__codegen_literals@case_17_object_shape.snap  codegen__codegen_literals@case_18_object_shape.snap  codegen__codegen_literals@case_18_object_shape_with_args.snap  codegen__codegen_literals@case_19_object_shape_with_args.snap  codegen__codegen_literals@case_19_types_query.snap  codegen__codegen_literals@case_20_range.snap  codegen__codegen_literals@case_20_types_query.snap
crates/edgedb_codegen/tests/ui/: case_01_str.rs  case_02_bool.rs  case_03_int64.rs  case_04_float64.rs  case_05_bigint.rs  case_06_decimal.rs  case_07_uuid.rs  case_08_datetime.rs  case_09_duration.rs  case_10_bytes.rs  case_11_array.rs  case_12_tuple.rs  case_13_named_tuple.rs  case_14_set.rs  case_15_empty_set.rs  case_16_input_shape.rs  case_17_input_shape_with_args.rs  case_18_object_shape.rs  case_19_object_shape_with_args.rs  case_20_types_query.rs
crates/edgedb_codegen_core/: CHANGELOG.md  Cargo.toml  changelog.md  readme.md
crates/edgedb_codegen_core/src/: constants.rs  errors.rs  lib.rs  utils.rs
crates/edgedb_codegen_macros/: CHANGELOG.md  Cargo.toml  changelog.md  readme.md
crates/edgedb_codegen_macros/src/: lib.rs
crates/edgedb_generator/: Cargo.toml
crates/edgedb_generator/src/: lib.rs  macros.rs  utils.rs
crates/edgedb_generator/src/snapshots/: edgedb_generator__tests__can_generate_content_without_args.snap  edgedb_generator__tests__can_generate_singular_content.snap
crates/edgedb_macros/: Cargo.toml
crates/edgedb_macros/src/: lib.rs
crates/edgedb_macros/tests/: compile.rs  query.rs
crates/edgedb_macros/tests/ui/: incorrect_args.rs  incorrect_args.stderr  invalid_query.rs  invalid_query.stderr  no_args.rs  no_args.stderr  one_arg.rs  one_arg.stderr
dbschema/: default.esdl
dbschema/migrations/: 00001-m1pqtqq.edgeql
setup/editors/helix/: languages.toml
setup/editors/vscode/: extensions.json  settings.json
setup/scripts/: nextest_setup.sh
