[package]
name = "edgedb_codegen"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
edgedb_codegen_macros = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
edgedb-derive = { workspace = true }
edgedb-errors = { workspace = true }
edgedb-protocol = { workspace = true, features = ["all-types"] }
edgedb-tokio = { workspace = true, features = ["unstable", "derive"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
typed-builder = { workspace = true, optional = true }
document-features = { workspace = true }

[dev-dependencies]
edgedb_codegen_core = { workspace = true }
rustversion = { workspace = true }
trybuild = { workspace = true }
assert2 = { workspace = true }
insta = { workspace = true, features = ["ron", "yaml", "redactions"] }
rstest = { workspace = true }
test-log = { workspace = true, features = ["log", "trace"] }
tokio = { workspace = true, features = ["time", "test-util", "fs"] }
typed-builder = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true

[features]

## This enables the `typed-builder` macro which can make creating `Input` props slightly easier. 
builder = ["edgedb_codegen_macros/builder", "dep:typed-builder"]

## Enable serde for the generated code.
serde = ["edgedb_codegen_macros/serde", "edgedb-protocol/with-serde", "dep:serde"]

## This turns on the `query` and `transaction` methods and anything that relies on `edgedb-tokio`. The reason to seperate this feature is to enable usage of this macro in browser environments.
query = ["edgedb_codegen_macros/query", "dep:edgedb-tokio"]
