[package]
name = "edgedb_codegen_macros"
version = { workspace = true }
authors = { workspace = true }
categories = ["database"]
edition = { workspace = true }
homepage = { workspace = true }
keywords = ["edgedb", "database", "typesafe", "checked", "macros"]
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "The proc-macro crate for the `edgedb_codegen` crate."

[lib]
proc-macro = true

[dependencies]
edgedb_codegen_core = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[features]
with_bigint = ["edgedb_codegen_core/with_bigint"]
with_bigdecimal = ["edgedb_codegen_core/with_bigdecimal"]
with_chrono = ["edgedb_codegen_core/with_chrono"]
with_all = ["edgedb_codegen_core/with_all"]
serde = []
query = []

[lints]
workspace = true
